/*
 * Licensed to the Apache Software Foundation (ASF) under one or more
 * contributor license agreements.  See the NOTICE file distributed with
 * this work for additional information regarding copyright ownership.
 * The ASF licenses this file to You under the Apache License, Version 2.0
 * (the "License"); you may not use this file except in compliance with
 * the License.  You may obtain a copy of the License at
 *
 *     http://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
 */

syntax = "proto3";

import "google/protobuf/any.proto";

package org.apache.dubbo.auth.v1alpha1;

option go_package = "github.com/apache/dubbo-admin/ca/v1alpha1";
option java_multiple_files = true;

message ObserveRequest {
  string nonce = 1;
  string type = 2;
}

message ObserveResponse {
  string nonce = 1;
  string type = 2;
  int64 revision = 3;
  repeated google.protobuf.Any data = 4;
}

service RuleService {
  rpc Observe(stream ObserveRequest)
      returns (stream ObserveResponse) {
  }
}
